samples/_failures_safe/1761504339_4f0be3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f46f93f3.c:176:1: error: expected identifier or ‘(’ at end of input
  176 | const char*
      | ^~~~~
